PQ-66 Add knowledge base section (#46)
Co-authored-by: Ion Bostan <i.bostan@intetics.com>